--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="12dp"
             android:useLevel="false">
-            <solid android:color="?attr/colorSurfaceVariant" />
+            <solid android:color="@color/offWhiteAlt" />
         </shape>
     </item>
     <item android:id="@android:id/progress">
@@ -20,8 +20,8 @@
                 android:useLevel="true">
                 <gradient
                     android:angle="0"
-                    android:endColor="?attr/colorPrimary"
-                    android:startColor="?attr/colorPrimaryVariant"
+                    android:endColor="@color/colorSecondary"
+                    android:startColor="@color/colorPrimary"
                     android:type="sweep"
                     android:useLevel="false" />
             </shape>
