--- a/app/src/main/res/drawable/dialog_rounded_background.xml
+++ b/app/src/main/res/drawable/dialog_rounded_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
-    <corners android:radius="16dp" />
+    <solid android:color="@color/colorSurface" />
+    <corners android:radius="20dp" />
+    <stroke android:width="1dp" android:color="@color/colorOnSurfaceVariant" />
     <padding
-        android:bottom="8dp"
-        android:left="8dp"
-        android:right="8dp"
-        android:top="8dp" />
+        android:bottom="12dp"
+        android:left="12dp"
+        android:right="12dp"
+        android:top="12dp" />
 </shape>
-
