--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -7,4 +7,6 @@
     android:paddingTop="16dp"
     android:paddingEnd="16dp"
     android:paddingBottom="8dp"
-    android:textAppearance="?attr/textAppearanceHeadline6" />
+    android:textAppearance="?attr/textAppearanceHeadline6"
+    android:textColor="@android:color/black"
+    android:textStyle="bold" />
